--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>用户登陆</h1>
+<p style="color: red">{{ msg }}</p>
 <form action="{{ url_for('user.login') }}" method="post">
      <p><input type="text" name="username" placeholder="用户名"></p>
      <p><input type="password" name="password" placeholder="密码"></p>
