--- a/templates/user/center.html
+++ b/templates/user/center.html
@@ -8,6 +8,7 @@
 <div><a href="{{ url_for('user.register') }}">注册</a> <a href="{{ url_for('user.login') }}">登陆</a> <a href="">退出</a></div>
 <div>
     <h1>所有用户信息如下：</h1>
+    搜索：<input type="text" name="search" placeholder="输入搜索的关键字"> <input type="button" value="搜索">
     {% if users %}
     <table border="1" cellpadding="0" width="50%">
     <tr>
