--- a/templates/user/center.html
+++ b/templates/user/center.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>用户中心</title>
+  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
 <div><a href="{{ url_for('user.register') }}">注册</a> <a href="{{ url_for('user.login') }}">登陆</a> <a href="">退出</a></div>
 <div>
     <h1>所有用户信息如下：</h1>
-    搜索：<input type="text" name="search" placeholder="输入搜索的关键字"> <input type="button" value="搜索">
+    搜索：<input type="text" name="search" placeholder="输入搜索的关键字"> <input type="button" value="搜索" id="search">
     {% if users %}
     <table border="1" cellpadding="0" width="50%">
     <tr>
@@ -24,7 +25,7 @@
             <th>{{ user.username }}</th>
             <th>{{ user.phone }}</th>
             <th>{{ user.rdatetime }}</th>
-            <th><a href="" >编辑</a> <a href="">删除</a></th>
+            <th><a href="" >编辑</a> <a href="{{ url_for('user.delete') }}?id={{ user.id }}">删除</a></th>
         </tr>
     {%  endfor %}
         </table>
@@ -32,5 +33,11 @@
     <p style="color: red; font-size: 20px">当前还没有任何的用户，抓紧时间注册!!!</p>
     {% endif %}
 </div>
+<script>
+    $('#search').click(function () {
+       let content = $("input[name='search']").val();
+       location.href = '{{ url_for('user.search') }}?search=' + content
+    })
+</script>
 </body>
 </html>
